# nice_tile_map

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  Pipfile  README.md
cmake/: windeployqt.cmake
src/: CMakeLists.txt  main.cpp  qml.qrc
src/app/qml/: main.qml
src/i18n/: nice_tile_map_pt_BR.ts
src/widgets/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
